--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,65 @@
-img:hover{
-    border-color: chartreuse;
+body{
+    background: url(https://www.toptal.com/designers/subtlepatterns/patterns/united-squares-negative.png);
+}
+
+nav {
+    background-color: white;
+    padding: 5px;
+}
+
+#myname {
+    
+    background-color: teal;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 24px;
+    font-weight: bolder;
+    padding: 30px;
+    float: left;
+}
+
+#navbar {
+    float:right;
+    display: inline;
+    text-align: right;
+    margin: 0 auto;
+
+}
+
+#navlinks {
+    background-color: white;
+    color: teal;
+    text-align: right;
+    font-style: italic;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 14px;
+    padding:14px;
+}
+
+
+.mainsection {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    width:960px;
+    background-color:white;
+    margin: 25px auto;
+}
+
+#message {
+        width: 100%;
+        height: 150px;
+}
+
+#left{
+    float: left;
+    width: 33.3%;
+}
+
+#middle{
+    float: left;
+    width: 33.3%%;
+}
+
+#right{
+    float: left;
+    width: 33.3%;
 }
